<resources>
    <string name="app_name">Project2 -SUB Companion</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="clickToReg">Click here to register.</string>
    <string name="click_here_to_login">Click here to Login.</string>
    <string name="hello">Hello:</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="view_calendar">View Upcoming Events</string>
    <string name="upcoming_events">Upcoming Events:</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="price">Price</string>
    <string name="event_name">Event Name</string>
    <string name="event_desc">This is a space for a lot of text to be shown because it is a description box.</string>
    <string name="edit">Edit</string>
    <string name="volunteer">Volunteer</string>
    <string name="add_manage_signup">Add/Manage Signup</string>
    <string name="add_event">Add Event</string>
    <string name="submit">Submit</string>
    <string name="add_signup">Add SignUp</string>
    <string name="student_id">Student ID #</string>
</resources>