<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:gravity="center"
    tools:context=".CalendarEventFullDetailActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_img"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_name"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/event_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/location"
            android:text="@string/location"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/date"
            android:text="@string/date"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.33"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/price"
            android:text="@string/price"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:id="@+id/event_desc"
        android:text="@string/event_desc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:text="@string/edit"
            android:id="@+id/btn_edit"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:text="@string/add_manage_signup"
            android:id="@+id/btn_signup"/>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/volunteer"
        android:id="@+id/btn_volunteer"/>



</LinearLayout>